feat: Adds initial authorized endpoint
