# openapi.yml
@@ -60,6 +60,9 @@ paths:
                 $ref: '#/components/schemas/JobDefinition'
         '400':
           description: Invalid input
+      security:
+        - api_key: []
+      
   /update_job_status:
     put:
       tags:
@@ -173,14 +176,14 @@ components:
 
 
   securitySchemes:
-    petstore_auth:
-      type: oauth2
-      flows:
-        implicit:
-          authorizationUrl: https://petstore3.swagger.io/oauth/authorize
-          scopes:
-            write:pets: modify pets in your account
-            read:pets: read your pets
+    # petstore_auth:
+    #   type: oauth2
+    #   flows:
+    #     implicit:
+    #       authorizationUrl: https://petstore3.swagger.io/oauth/authorize
+    #       scopes:
+    #         write:pets: modify pets in your account
+    #         read:pets: read your pets
     api_key:
       type: apiKey
       name: api_key
